<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="fei">FEI</string>
    <string name="kampus">Kampus</string>

    <string name="app_name">UPCE jídelníček</string>
    <string name="menu_settings">Nastavení</string>

    <string name="refresh">Aktualizovat</string>
    <string name="refresh_all">Aktualizovat vše</string>


    <string name="sett_look">Nastavení vzhledu</string>
    <string name="sett_look_css">Vzhled jídelníčku</string>
    <string name="sett_look_css_desc">Zvolte vzhled jídelníčku</string>
    <string name="black_on_white">Černá na bílé</string>
    <string name="white_on_black">Bílá na černé</string>

    <string name="sett_application">Nastavení aplikace</string>
    <string name="sett_download_fei">Stahovat i menzu na FEI</string>
    <string name="sett_default_screen">Výchozí jídelníček</string>
    <string name="sett_default_screen_desc">Bude zobrazen po spuštění aplikace jako první</string>
    <string name="sett_fei_menza">Jídelna na FEI</string>

    <string name="dlg_first_run_title">Vítejte</string>
    <string name="dlg_first_run_message">Zdá se, že toto je poprve, kdy jste spustili aplikaci UPCE jídelníček. Přejete si nyní nastavit aplikaci?</string>
    <string name="dlg_update">Poslední aktualizace byla provedena minulý týden. Aktualizovat?</string>
    <string name="dlg_reload_needed">Změna se projeví až po aktualizaci jídelníčku</string>
    <string name="dlg_reload_needed_title">Vyžadována aktualizace</string>

    <string name="err_document_null">Nepodařilo se stáhnout jídelníček</string>
    <string name="err_document_null_msg">Zkuste to prosím později.</string>
    <string name="err_document_parse">Nepodařilo se naparsovat jídelníček. Asi se změnila struktura webu.</string>

    <string name="dlg_updating">Stahuji...</string>
</resources>